# hf_transfer

./: Cargo.toml  LICENSE  README.md  flake.nix  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: CI.yml  audit.yml  nix-checks.yml  test.yml  test_hf_transfer.yml
examples/: upload_to_s3.py
examples/upload_to_s3/: requirements.txt  upload.py
examples/vllm_zerocopy/: README.md  bench_download.py  bench_ttft.py  bench_ttft_transformers.py  setup_gpu_instance.sh  zerocopy_loader.py
src/: lib.rs  retry.rs
tests/: test_transfer.py
