[package]
name = "hf_transfer"
version = "0.1.10-dev0"
edition = "2021"
# Minimum supported Rust version, keep in sync with test.yml
rust-version = "1.71.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hf_transfer"
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py38"] }
rand = "0.8.5"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
