[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "hf_transfer"
description = "Speed up file transfers with the Hugging Face Hub."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: File Transfer Protocol (FTP)",
]
dynamic = ["version"]

[project.urls]
Issues = "https://github.com/huggingface/hf_transfer/issues"
Repository = "https://github.com/huggingface/hf_transfer.git"
Documentation = "https://huggingface.co/docs/hf_transfer"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
